// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Icon should not render with empty string 1`] = `<div />`;

exports[`Icon should not render with invalid icon 1`] = `<div />`;

exports[`Icon should render 1`] = `
<div>
  <span
    aria-label="su-save"
    class="su-save"
  />
</div>
`;

exports[`Icon should render with class names 1`] = `
<div>
  <span
    aria-label="su-pen"
    class="su-pen test"
  />
</div>
`;

exports[`Icon should render with onClick handler, role and tabindex 1`] = `
<div>
  <span
    aria-label="su-save"
    class="su-save clickable test"
    role="button"
    tabindex="0"
  />
</div>
`;
